# exproject

./: .gitignore  CMakeLists.txt
exlib/lib/: libevent.lib  libevent_core.lib  libevent_extras.lib  libzmq.lib
getway/: CMakeLists.txt  CMakelists.txt  RegisterReq.cpp  RegisterReq.h  getway.vcxproj  main.cpp
httpsvr/: CMakeLists.txt  main.cpp
libprotocol/: CMakeLists.txt  common.pb.cc  common.pb.h  common.proto  http.proto  libprotocol.vcxproj  libprotocol.vcxproj.filters  register.pb.cc  register.pb.h  register.proto  test.py
registersvr/: CMakeLists.txt  main.cpp  registersvr.vcxproj
win32/: getway.sln
